@@ -1,3 +1,7 @@
+2011-11-11  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* NSWindow-test: add a window test.
+
 2011-09-26  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* TextSystem-test: add an experimental test for text system stuff
